--- a/Conditional/WhatIsConditionalEffects.tex
+++ b/Conditional/WhatIsConditionalEffects.tex
@@ -22,6 +22,6 @@ For any interpretation of the variables $\varC\left(\cond\right)$, the \textit{e
 
 See \Cref{ex:ca:sokoban-moveleft-action} for an example of an action with conditional effects. 
 
-In the following sections, we will discuss what problems arise when learning conditional action schemas, analyse the applicability of the methods explored in \Cref{chp:nca}, and finally discuss new models that are better suited.
+In the following sections, we will discuss what problems arise when learning conditional action schemas, analyze the applicability of the methods explored in \Cref{chp:nca}, and finally discuss new models that are better suited.
 
 \end{document}
