--- a/Master.tex
+++ b/Master.tex
@@ -205,7 +205,7 @@ Action schema learning is important as it is the first step for the construction
 This thesis deals with action schema learning through deductive reasoning.
 The purpose of this thesis is to show how we may approach action learning from a non-probabilistic point of view. 
 We accomplish this using established mathematical models, such as graphs and sets. 
-What the thesis provides is algorithms, mathematical formulas/models for learning STRIPS-style action schema, and gives an insight on how action schemas with conditional effects can be learned.
+What the thesis provides is algorithms, mathematical formulas/models for learning STRIPS-style action schema using polynomial space complexity, and gives an insight on how action schemas with conditional effects can be learned.
 
 
 
