--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -91,7 +91,7 @@ Given the restrictions listed above, we are able to simplify the problem. That i
 
 \subsection{Learning conditional effects}
 
-With the above simplification of the problem, we will now analyse what it means to learn conditional effects. The primary difference is that 
+With the above simplification of the problem, we will now analyze what it means to learn conditional effects. The primary difference is that 
 
 Consider again a state transition $(S,a,S')$. Trivially, when an atom $q\left(O_1, \dots, O_{|p|}\right)$ occurs in $\Delta S$, it holds that there is a conditional in $A$ with atom $q\left((x_1, \dots, x_{|q|}\right)$ as an effect. That is, there exists a conditional of the form
 
