--- a/Preface.tex
+++ b/Preface.tex
@@ -5,7 +5,7 @@ This thesis was prepared at DTU Compute in fulfilment of the requirements for ac
 This thesis focus on non-conditional and conditional action schema learning.
 It extends the work of \cite{Walsh2008}, but also uses ideas from the scientific method, and we have been inspired by the works of \cite{popper1959a}.
 
-This thesis will provide a proposal about a general agent learning algorithm, a complete a analysis of non-conditional action learning; and a framework and framing of the problems with conditional action learning, and provide initial proposals a solution.
+This thesis will provide a proposal about a general agent learning algorithm, a complete a analysis of non-conditional action learning; and a framework and framing of the problems with conditional action learning. 
 %==================================================================================================
 % SIGNATURE AREA
 %==================================================================================================
