--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -137,7 +137,10 @@ Even though we intuitively know that it is only the lamp which is the only requi
 		\item Sofa and lamp location does not matter
 		\item A table is not needed
 	\end{itemize}
-	Its important to note that since we have not seen an absence of a sofa we cannot rule out that the presence of a sofa is a precondition for the light to turn on. This is important because it shows us that by trying different scenarios we reduce the incorrect preconditions. Notice that although this is an abstract example, it can be seen that the relations between e.g.\ the sofa and the lamp or the table and the sofa are irrelevant.
+    
+    Observe that although this is an abstract example, the various preconditions at each step can be seen as patterns: The exact position of the agent and the lamp do not matter, as long as they are equal. The fact that the sofa changed place means that its relation to the other objects changed from the first case, and as such it can be excluded from the pattern and the precondition.
+
+	Its important to note that since we have not seen an absence of a sofa we cannot rule out that the presence of a sofa is a precondition for the light to turn on. This is important because it shows us that by trying different scenarios we reduce the incorrect preconditions. 
 
 \end{example}
 
